Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-8752] Crash when subscript override has mismatch labels #51260

Closed
akyrtzi opened this issue Sep 14, 2018 · 1 comment
Closed

[SR-8752] Crash when subscript override has mismatch labels #51260

akyrtzi opened this issue Sep 14, 2018 · 1 comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software type checker Area → compiler: Semantic analysis

Comments

@akyrtzi
Copy link
Member

akyrtzi commented Sep 14, 2018

Previous ID SR-8752
Radar rdar://problem/44460766
Original Reporter @akyrtzi
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, CompilerCrash, TypeChecker
Assignee None
Priority Medium

md5: 75966843f7f29a93390da837c3e5e6f8

Issue Description:

With this code:

class AccessorTest {
  subscript(a a: Int) -> Int { return a }
}
class Sub: AccessorTest {
  override subscript(a: Int) -> Int { return a }
}

Compiler crashes with `swiftc -typecheck` see attached crash log.
This is from master (d40a182)

@slavapestov
Copy link
Member

#19375

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

3 participants